infra/k8s/appointment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appointment-service
  namespace: healthcare
  labels:
    app: appointment-service
    app.kubernetes.io/part-of: healthcare-system
spec:
  type: ClusterIP
  selector:
    app: appointment-service
  ports:
    - name: http
      port: 5001
      targetPort: http
